[metadata]
name = tsp
version = 1.0.0
author = Jacob VanDrunen
author_email = jvandrun@uci.edu
description = A library for cognitive science research on the traveling salesperson problem (TSP).
long_description = file: README.md
url = https://github.com/jackvandrunen/tsp
project_urls =
    Bug Tracker = https://github.com/jackvandrunen/tsp/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib >= 3.3.2
    scipy >= 1.5.2
    bottle >= 0.12.18
    numpy >= 1.18.4
    opencv_python >= 4.5.1.48
    Pillow >= 8.3.1
    scikit_learn >= 0.24.2
    pytsp @ git+https://github.com/jackvandrunen/pytsp.git
include_package_data = True

[options.packages.find]
where = src
